fix collapse on load

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1071,7 +1071,7 @@ h4 {
   color: black;
 }
 
-.panel, .references-panel {
+.panel, .panel-references {
   display: none; 
   overflow: hidden;
   margin-bottom: -15px;
